newclay/test/Compiler/Propagation/Fail/BaselessRecursivePropagation/main.clay

define foo;
overload foo(x:Int) = if (true) foo(1) else foo(0);

define main;
overload main() = foo(2);

